--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,13 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+tasks.jar{
+	manifest {
+		attributes["Main-Class"] = "com.hiagosouza.Application"
+	}
+}
+
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
